--- a/estilos.scss
+++ b/estilos.scss
@@ -1,5 +1,13 @@
 
 @import "sass/generales.scss";
+@import "sass/home.scss";
+@import "sass/discografia.scss";
+@import "sass/videos.scss";
+@import "sass/fotografia.scss";
+@import "sass/integrantes.scss";
+@import "sass/contacto.scss";
+@import "sass/footer.scss";
+
 
 *{
     margin: 0;
@@ -10,530 +18,4 @@
 
 body{
     font-family: $fuente1;
-}
-
-/* Header Bootstrap */
-
-.navbar{
-    background-color: $color1;
-}
-
-.navbar-brand{
-    color: $color2 !important;
-    font-size: x-large;
-}
-
-.nav-item{
-    text-align: center;
-}
-
-.nav-item a{
-    text-decoration: none !important;
-    color: $color3;
-    list-style: none;
-    margin-left: 20px;
-    text-transform: uppercase;
-}
-
-.nav-item :hover{
-    color: $color2 !important;
-}
-
-.menu{
-    float: right;
-    font-size: 30px;
-}
-
-.redes{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    float: right;
-}
-
-.redes :hover{
-    color:$color3;
-}
-
-i{
-    font-size: 40px;
-    color: rgba(0, 0, 0, 0.555);
-    letter-spacing: 10px;
-}
-
-
-main{
-    background-image: url(imagenes/logos_juntos/fondomobile.JPG);
-    height: 100vh;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    padding:20px;
-}
-
-.call{
-    width: 250px;
-    background-color: rgba(0, 0, 0, 0.6);
-    border: 2px solid $color1;
-    border-radius: 10px;
-    float: right;
-    margin-top: 250px;
-    padding: 20px;
-}
-
-.call p{
-    color: $color3;
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    padding: auto;
-}
-
-
-h1{
-    color: $color3;
-    margin-bottom: 12px;
-    font-size: 25px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.callb {
-    background-color:$color3;
-    padding: 10px 20px;
-    height: 30px;
-    width: 20px;
-    border-radius: 10px;
-    text-decoration: none;
-}
-
-h2{
-    background-color: $color1;
-    border: 1px solid $color2;
-    text-align: center;
-    text-transform: uppercase;
-    color: $color3;
-    padding: 10px;
-    margin-bottom: 0;
-    font-size: x-large;
-}
-
-/* --------------Discografía----------------- */
-
-
-.discografia{
-    width: 100%;
-    height: 550px;
-    background-color: lightgray;
-}
-
-.nleft{
-    background-image: url(imagenes/flyers/rebelion.jpg); 
-    background-size:cover;
-    height: 50%;
-    width: 100%;
-    padding: 20px;
-}
-
-.nright{
-    padding: 20px;
-    height: 35%;
-}
-
-.nright h3{
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
-.nright p{
-    font-size: 17px;
-}
-
-.redes_disco{
-    text-align: center;
-    padding: 5px;
-    height: auto;
-}
-
-.redes_disco :hover{
-    color: $color1;
-}
-
-.adicional{
-    display: none;
-}
-
-/* --------------Videos----------------- */
-
-.contenidovideos{
-    background-color: $color2;
-    padding: 5px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    align-items: center;
-}
-
-.video_video iframe{
-    margin: 0;
-    margin: 10px;
-}
-
-/* --------------Galeria----------------- */
-
-.galeria{
-    background-color: $color2;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(8, 200px);
-    grid-gap: 20px;
-    padding: 20px;
-}
-
-.item{
-    width: 100%;
-    border: 2px solid lightgray;
-}
-
-.item:hover{
-    transform: scale(1.05);
-    transition: all 1s;
-    filter: grayscale(80%);
-}
-
-.item1{
-    background-image: url(imagenes/galeria/vivo1.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item2{
-    background-image: url(imagenes/galeria/vivo2.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item3{
-    background-image: url(imagenes/galeria/vivo3.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item4{
-    background-image: url(imagenes/galeria/vivo4.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item5{
-    background-image: url(imagenes/galeria/vivo5.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item6{
-    background-image: url(imagenes/galeria/vivo1.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item7{
-    background-image: url(imagenes/galeria/vivo2.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.item8{
-    background-image: url(imagenes/galeria/vivo1.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-
-/* --------------Integrantes----------------- */
-
-.galeria_integra{
-    background-color: $color2;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 500px);
-    grid-gap: 20px;
-    padding: 20px;
-}
-
-.item{
-    width: 100%;
-    border: 2px solid #fff;
-}
-
-.item:hover{
-    transform: scale(1.05);
-    transition: all 1s;
-    filter: grayscale(80%)
-}
-
-.describe{
-    color: $color3;
-    font-size: 20px;
-    text-align: center;
-    padding: 10px;
-}
-
-.tomy{
-    background-image: url(imagenes/integrantes/tomy.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.seba{
-    background-image: url(imagenes/integrantes/seba.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.diego{
-    background-image: url(imagenes/integrantes/diego.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.russo{
-    background-image: url(imagenes/integrantes/russo.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-
-/* --------------Contacto----------------- */
-
-.contacto2{
-    background-color: lightgray;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.btn{
-    background-color: $color1 !important;
-}
-
-.cajacon{
-    height: 550px;
-}
-
-/* --------------Footer----------------- */
-
-footer{
-    background-color: $color1;
-    text-align: center;
-    font-family: $fuente1;
-    padding: 15px;
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-}
-
-footer .redes{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-footer i{
-    font-size: 40px;
-    color: $color2;
-    letter-spacing: 10px;
-}
-
-footer p{
-    font-size: 20px;
-}
-
-.sitiodesa{
-    font-size: 15px;
-    color: $color3;
-}
-
-/* ------------------ Media - Adaptación 1200px----------------------- */
-
-@media only screen and (min-width:1200px){
-
-/* Home 1200 */
-
-main{
-    background-image: url(imagenes/logos_juntos/fondo.JPG);
-    display:flex;
-    align-items: center;
-    justify-content:flex-end;
-    flex-direction: column-reverse;
-}
-
-.call{
-    width: 600px;
-    height: 250px;
-    background-color: rgba(0, 0, 0, 0.514);
-    margin: 10px;
-    padding: 40px;
-}
-
-main .redes{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 80px;
-    align-content: space-around;
-}
-
-/* ---Discografía 1200--- */
-
-.discografia{
-display: flex;
-}
-
-.discoaju{
-    display: flex;
-    flex-flow: column;
-}
-.nleft{
-    background-image: url(imagenes/flyers/rebelion_full.jpg); 
-    height: 100%;
-    width: 80%;
-}
-
-.nright{
-    padding: 50px;
-    height: 80%;
-}
-
-.adicional{
-    display: block;
-    text-align: center;
-}
-
-main .redes i{
-    font-size: 70px;
-}
-.redes_disco{
-    height: 30%;
-    text-align: center;
-    letter-spacing: 20px;
-}
-
-.redes_disco i{
-    font-size: 70px;
-    color:$color1
-}
-
-/* --------------Videos 1200----------------- */
-
-.contenidovideos{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-evenly;
-}
-
-.video_video iframe{
-    height: 400px;
-    width: 350px;
-    background-position: center;
-}
-
-
-
-/*-- Fotografía 1200 --*/
-
-    .galeria{
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 380px);
-}
-
-    .item1{
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-
-    .item4{
-        grid-column: 2/4;
-        grid-row: 2/3;
-    }
-
-    .item5{
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-
-    .item6{
-        grid-column: 3/4;
-        grid-row: 3/5;
-    }
-
-    .item8{
-        grid-column: 2/3;
-        grid-row: 4/5;
-    }
-
-
-/* --------------Integrantes----------------- */
-
-.galeria_integra{
-    background-color: $color2;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 500px;
-    grid-gap: 20px;
-    padding: 20px;
-}
-
-/* --------------Contacto 1200----------------- */
-
-.cajacon{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: lightgray;
-
-}
-
-.imagenlogoco{
-    background-image: url(imagenes/logos_juntos/logobcoyngro.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 300px;
-    width: 300px;
-}
-
-/* --------------Footer 1200----------------- */
-
-footer{
-    text-align: center;
-    padding: 15px;
-    font-size: 35px;
-}
-
-footer .redes{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-footer i{
-    font-size: 40px;
-    color: $color2;
-    letter-spacing: 10px;
-}
-
-footer p{
-    font-size: 20px;
-}
-
-.sitiodesa{
-    font-size: 15px;
-    color: $color3;
-}
-
 }
