--- a/sass/estilos_backup.scss
+++ b/sass/estilos_backup.scss
@@ -1,24 +1,25 @@
 
+@import "sass/generales.scss";
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* colores del vuelo del cuervo: #42307A violeta - #E79232 naranja */
 
 body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: $fuente1;
 }
 
 /* Header Bootstrap */
 
 .navbar{
-    background-color: #E79232;
+    background-color: $color1;
 }
 
 .navbar-brand{
-    color: black !important;
+    color: $color2 !important;
     font-size: x-large;
 }
 
@@ -28,14 +29,14 @@ body{
 
 .nav-item a{
     text-decoration: none !important;
-    color: white;
+    color: $color3;
     list-style: none;
     margin-left: 20px;
     text-transform: uppercase;
 }
 
 .nav-item :hover{
-    color: black !important;
+    color: $color2 !important;
 }
 
 .menu{
@@ -50,7 +51,7 @@ body{
 }
 
 .redes :hover{
-    color:white;
+    color:$color3;
 }
 
 i{
@@ -72,7 +73,7 @@ main{
 .call{
     width: 250px;
     background-color: rgba(0, 0, 0, 0.6);
-    border: 2px solid #E79232;
+    border: 2px solid $color1;
     border-radius: 10px;
     float: right;
     margin-top: 250px;
@@ -80,7 +81,7 @@ main{
 }
 
 .call p{
-    color: white;
+    color: $color3;
     margin-bottom: 40px;
     text-transform: uppercase;
     padding: auto;
@@ -88,7 +89,7 @@ main{
 
 
 h1{
-    color: white;
+    color: $color3;
     margin-bottom: 12px;
     font-size: 25px;
     text-align: center;
@@ -96,7 +97,7 @@ h1{
 }
 
 .callb {
-    background-color:white;
+    background-color:$color3;
     padding: 10px 20px;
     height: 30px;
     width: 20px;
@@ -105,11 +106,11 @@ h1{
 }
 
 h2{
-    background-color: #E79232;
-    border: 1px solid black;
+    background-color: $color1;
+    border: 1px solid $color2;
     text-align: center;
     text-transform: uppercase;
-    color: white;
+    color: $color3;
     padding: 10px;
     margin-bottom: 0;
     font-size: x-large;
@@ -155,7 +156,7 @@ h2{
 }
 
 .redes_disco :hover{
-   color: #E79232;
+    color: $color1;
 }
 
 .adicional{
@@ -165,7 +166,7 @@ h2{
 /* --------------Videos----------------- */
 
 .contenidovideos{
-    background-color: black;
+    background-color: $color2;
     padding: 5px;
     text-align: center;
     display: flex;
@@ -175,14 +176,14 @@ h2{
 }
 
 .video_video iframe{
-   margin: 0;
-   margin: 10px;
+    margin: 0;
+    margin: 10px;
 }
 
 /* --------------Galeria----------------- */
 
 .galeria{
-    background-color: black;
+    background-color: $color2;
     height: auto;
     width: 100%;
     display: grid;
@@ -255,7 +256,7 @@ h2{
 /* --------------Integrantes----------------- */
 
 .galeria_integra{
-    background-color: black;
+    background-color: $color2;
     height: auto;
     width: 100%;
     display: grid;
@@ -277,7 +278,7 @@ h2{
 }
 
 .describe{
-    color: white;
+    color: $color3;
     font-size: 20px;
     text-align: center;
     padding: 10px;
@@ -318,7 +319,7 @@ h2{
 }
 
 .btn{
-    background-color: #E79232 !important;
+    background-color: $color1 !important;
 }
 
 .cajacon{
@@ -328,9 +329,9 @@ h2{
 /* --------------Footer----------------- */
 
 footer{
-    background-color: #E79232;
+    background-color: $color1;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: $fuente1;
     padding: 15px;
     font-size: 18px;
     display: flex;
@@ -344,7 +345,7 @@ footer .redes{
 
 footer i{
     font-size: 40px;
-    color: black;
+    color: $color2;
     letter-spacing: 10px;
 }
 
@@ -354,7 +355,7 @@ footer p{
 
 .sitiodesa{
     font-size: 15px;
-    color: white;
+    color: $color3;
 }
 
 /* ------------------ Media - Adaptación 1200px----------------------- */
@@ -364,11 +365,11 @@ footer p{
 /* Home 1200 */
 
 main{
-     background-image: url(imagenes/logos_juntos/fondo.JPG);
-        display:flex;
-        align-items: center;
-        justify-content:flex-end;
-        flex-direction: column-reverse;
+    background-image: url(imagenes/logos_juntos/fondo.JPG);
+    display:flex;
+    align-items: center;
+    justify-content:flex-end;
+    flex-direction: column-reverse;
 }
 
 .call{
@@ -417,15 +418,15 @@ main .redes i{
     font-size: 70px;
 }
 .redes_disco{
-   height: 30%;
-   text-align: center;
-   letter-spacing: 20px;
+    height: 30%;
+    text-align: center;
+    letter-spacing: 20px;
 }
 
 .redes_disco i{
     font-size: 70px;
-    color:#E79232
- }
+    color:$color1
+}
 
 /* --------------Videos 1200----------------- */
 
@@ -436,9 +437,9 @@ main .redes i{
 }
 
 .video_video iframe{
-  height: 400px;
-  width: 350px;
-  background-position: center;
+    height: 400px;
+    width: 350px;
+    background-position: center;
 }
 
 
@@ -446,9 +447,9 @@ main .redes i{
 /*-- Fotografía 1200 --*/
 
     .galeria{
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: repeat(4, 380px);
-    }
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(4, 380px);
+}
 
     .item1{
         grid-column: 1/3;
@@ -479,7 +480,7 @@ main .redes i{
 /* --------------Integrantes----------------- */
 
 .galeria_integra{
-    background-color: black;
+    background-color: $color2;
     height: auto;
     width: 100%;
     display: grid;
@@ -500,7 +501,6 @@ main .redes i{
 }
 
 .imagenlogoco{
-    background-color: violet;
     background-image: url(imagenes/logos_juntos/logobcoyngro.jpg);
     background-position: center;
     background-size: cover;
@@ -523,7 +523,7 @@ footer .redes{
 
 footer i{
     font-size: 40px;
-    color: black;
+    color: $color2;
     letter-spacing: 10px;
 }
 
@@ -533,7 +533,7 @@ footer p{
 
 .sitiodesa{
     font-size: 15px;
-    color: white;
+    color: $color3;
 }
 
 }
