--- a/estilos.css
+++ b/estilos.css
@@ -1,17 +1,7 @@
 @charset "UTF-8";
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
 /* Header Bootstrap */
 .navbar {
-  background-color: red;
+  background-color: #E79232;
 }
 
 .navbar-brand {
@@ -68,7 +58,7 @@ main {
 .call {
   width: 250px;
   background-color: rgba(0, 0, 0, 0.6);
-  border: 2px solid red;
+  border: 2px solid #E79232;
   border-radius: 10px;
   float: right;
   margin-top: 250px;
@@ -100,7 +90,7 @@ h1 {
 }
 
 h2 {
-  background-color: red;
+  background-color: #E79232;
   border: 1px solid black;
   text-align: center;
   text-transform: uppercase;
@@ -110,6 +100,31 @@ h2 {
   font-size: x-large;
 }
 
+/* ------------------ Media - Adaptación 1200px----------------------- */
+@media only screen and (min-width: 1200px) {
+  /* Home 1200 */
+  main {
+    background-image: url(imagenes/logos_juntos/fondo.JPG);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: column-reverse;
+  }
+  .call {
+    width: 600px;
+    height: 250px;
+    background-color: rgba(0, 0, 0, 0.514);
+    margin: 10px;
+    padding: 40px;
+  }
+  main .redes {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 80px;
+    align-content: space-around;
+  }
+}
 /* --------------Discografía----------------- */
 .discografia {
   width: 100%;
@@ -148,13 +163,49 @@ h2 {
 }
 
 .redes_disco :hover {
-  color: red;
+  color: #E79232;
 }
 
 .adicional {
   display: none;
 }
 
+/* ------------------ Media - Adaptación 1200px----------------------- */
+@media only screen and (min-width: 1200px) {
+  /* ---Discografía 1200--- */
+  .discografia {
+    display: flex;
+  }
+  .discoaju {
+    display: flex;
+    flex-flow: column;
+  }
+  .nleft {
+    background-image: url(imagenes/flyers/rebelion_full.jpg);
+    height: 100%;
+    width: 80%;
+  }
+  .nright {
+    padding: 50px;
+    height: 80%;
+  }
+  .adicional {
+    display: block;
+    text-align: center;
+  }
+  main .redes i {
+    font-size: 70px;
+  }
+  .redes_disco {
+    height: 30%;
+    text-align: center;
+    letter-spacing: 20px;
+  }
+  .redes_disco i {
+    font-size: 70px;
+    color: #E79232;
+  }
+}
 /* --------------Videos----------------- */
 .contenidovideos {
   background-color: black;
@@ -171,7 +222,21 @@ h2 {
   margin: 10px;
 }
 
-/* --------------Galeria----------------- */
+/* ------------------ Media - Adaptación 1200px----------------------- */
+@media only screen and (min-width: 1200px) {
+  /* --------------Videos 1200----------------- */
+  .contenidovideos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .video_video iframe {
+    height: 400px;
+    width: 350px;
+    background-position: center;
+  }
+}
+/* --------------Fotografía----------------- */
 .galeria {
   background-color: black;
   height: auto;
@@ -242,6 +307,34 @@ h2 {
   background-position: center;
 }
 
+/* ------------------ Media - Adaptación 1200px----------------------- */
+@media only screen and (min-width: 1200px) {
+  /*-- Fotografía 1200 --*/
+  .galeria {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(4, 380px);
+  }
+  .item1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .item4 {
+    grid-column: 2/4;
+    grid-row: 2/3;
+  }
+  .item5 {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+  .item6 {
+    grid-column: 3/4;
+    grid-row: 3/5;
+  }
+  .item8 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+}
 /* --------------Integrantes----------------- */
 .galeria_integra {
   background-color: black;
@@ -296,6 +389,20 @@ h2 {
   background-position: center;
 }
 
+/* ------------------ Media - Adaptación 1200px----------------------- */
+@media only screen and (min-width: 1200px) {
+  /* --------------Integrantes----------------- */
+  .galeria_integra {
+    background-color: black;
+    height: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 500px;
+    grid-gap: 20px;
+    padding: 20px;
+  }
+}
 /* --------------Contacto----------------- */
 .contacto2 {
   background-color: lightgray;
@@ -305,16 +412,33 @@ h2 {
 }
 
 .btn {
-  background-color: red !important;
+  background-color: #E79232 !important;
 }
 
 .cajacon {
   height: 550px;
 }
 
+/* ------------------ Media - Adaptación 1200px----------------------- */
+@media only screen and (min-width: 1200px) {
+  /* --------------Contacto 1200----------------- */
+  .cajacon {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: lightgray;
+  }
+  .imagenlogoco {
+    background-image: url(imagenes/logos_juntos/logobcoyngro.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 300px;
+    width: 300px;
+  }
+}
 /* --------------Footer----------------- */
 footer {
-  background-color: red;
+  background-color: #E79232;
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding: 15px;
@@ -345,122 +469,6 @@ footer p {
 
 /* ------------------ Media - Adaptación 1200px----------------------- */
 @media only screen and (min-width: 1200px) {
-  /* Home 1200 */
-  main {
-    background-image: url(imagenes/logos_juntos/fondo.JPG);
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-direction: column-reverse;
-  }
-  .call {
-    width: 600px;
-    height: 250px;
-    background-color: rgba(0, 0, 0, 0.514);
-    margin: 10px;
-    padding: 40px;
-  }
-  main .redes {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 80px;
-    align-content: space-around;
-  }
-  /* ---Discografía 1200--- */
-  .discografia {
-    display: flex;
-  }
-  .discoaju {
-    display: flex;
-    flex-flow: column;
-  }
-  .nleft {
-    background-image: url(imagenes/flyers/rebelion_full.jpg);
-    height: 100%;
-    width: 80%;
-  }
-  .nright {
-    padding: 50px;
-    height: 80%;
-  }
-  .adicional {
-    display: block;
-    text-align: center;
-  }
-  main .redes i {
-    font-size: 70px;
-  }
-  .redes_disco {
-    height: 30%;
-    text-align: center;
-    letter-spacing: 20px;
-  }
-  .redes_disco i {
-    font-size: 70px;
-    color: red;
-  }
-  /* --------------Videos 1200----------------- */
-  .contenidovideos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-  .video_video iframe {
-    height: 400px;
-    width: 350px;
-    background-position: center;
-  }
-  /*-- Fotografía 1200 --*/
-  .galeria {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 380px);
-  }
-  .item1 {
-    grid-column: 1/3;
-    grid-row: 1/2;
-  }
-  .item4 {
-    grid-column: 2/4;
-    grid-row: 2/3;
-  }
-  .item5 {
-    grid-column: 1/3;
-    grid-row: 3/4;
-  }
-  .item6 {
-    grid-column: 3/4;
-    grid-row: 3/5;
-  }
-  .item8 {
-    grid-column: 2/3;
-    grid-row: 4/5;
-  }
-  /* --------------Integrantes----------------- */
-  .galeria_integra {
-    background-color: black;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 500px;
-    grid-gap: 20px;
-    padding: 20px;
-  }
-  /* --------------Contacto 1200----------------- */
-  .cajacon {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: lightgray;
-  }
-  .imagenlogoco {
-    background-image: url(imagenes/logos_juntos/logobcoyngro.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 300px;
-    width: 300px;
-  }
   /* --------------Footer 1200----------------- */
   footer {
     text-align: center;
@@ -483,6 +491,15 @@ footer p {
     font-size: 15px;
     color: white;
   }
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 /*# sourceMappingURL=estilos.css.map */
