--- a/sass/home.scss
+++ b/sass/home.scss
@@ -31,22 +31,7 @@
     font-size: 30px;
 }
 
-.redes{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    float: right;
-}
-
-.redes :hover{
-    color:$color3;
-}
-
-i{
-    font-size: 40px;
-    color: rgba(0, 0, 0, 0.555);
-    letter-spacing: 10px;
-}
-
+// Main
 
 main{
     background-image: url(imagenes/logos_juntos/fondomobile.JPG);
@@ -55,7 +40,22 @@ main{
     background-position: center;
     background-size: cover;
     padding:20px;
+    .redes{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        float: right;
+        :hover{
+            color:$color3;
+        }
+        i{
+            font-size: 40px;
+            color: rgba(0, 0, 0, 0.555);
+            letter-spacing: 10px;
+        }
+    }
 }
+
+// Cartel
 
 .call{
     width: 250px;
@@ -63,44 +63,29 @@ main{
     border: 2px solid $color1;
     border-radius: 10px;
     float: right;
-    margin-top: 250px;
+    margin-top: 225px;
     padding: 20px;
-}
-
-.call p{
-    color: $color3;
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    padding: auto;
-}
-
-
-h1{
-    color: $color3;
-    margin-bottom: 12px;
-    font-size: 25px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.callb {
-    background-color:$color3;
-    padding: 10px 20px;
-    height: 30px;
-    width: 20px;
-    border-radius: 10px;
-    text-decoration: none;
-}
-
-h2{
-    background-color: $color1;
-    border: 1px solid $color2;
-    text-align: center;
-    text-transform: uppercase;
-    color: $color3;
-    padding: 10px;
-    margin-bottom: 0;
-    font-size: x-large;
+    h1{
+        color: $color3;
+        margin-bottom: 12px;
+        font-size: 25px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    p{
+        color: $color3;
+        margin-bottom: 40px;
+        text-transform: uppercase;
+        padding: auto;
+    }
+    .callb {
+        background-color:$color3;
+        padding: 10px 20px;
+        height: 30px;
+        width: 20px;
+        border-radius: 10px;
+        text-decoration: none;
+    }
 }
 
 /* ------------------ Media - Adaptación 1200px----------------------- */
@@ -115,6 +100,13 @@ main{
     align-items: center;
     justify-content:flex-end;
     flex-direction: column-reverse;
+    .redes{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: 80px;
+        align-content: space-around;
+    }
 }
 
 .call{
@@ -123,14 +115,6 @@ main{
     background-color: rgba(0, 0, 0, 0.514);
     margin: 10px;
     padding: 40px;
-}
-
-main .redes{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 80px;
-    align-content: space-around;
 }
 
 }
